--- a/src/main/webapp/template/css/estilo.css
+++ b/src/main/webapp/template/css/estilo.css
@@ -2,6 +2,25 @@ body{
   margin: 0px;
   background: rgb(230, 231, 230);
 }
+h2 {
+    font-family: sans-serif;
+}
+/*Colunas*/
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+.cinza {
+  color: #2d2d2d;
+}
 /*Containers*/
 
 .container {
@@ -19,8 +38,17 @@ body{
 .direita {
   text-align: right;
 }
+.float-r {
+  float:right;
+  padding-right: 9px;
+}
+.float-l {
+  padding: 7px;
+  float:left;
+}
 .containerX {
   /*margin-top: 5px;*/
+
   margin: 0 auto;
   width: 1080px;
   min-height: 100px;
@@ -50,6 +78,37 @@ body{
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 500;
+}
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+label {
+  color: #6d6c6c;
+}
+.form-login {
+  width: 300px;
+  float: left;
 }
 .botaoS {
   width: 80px;
