Começo da implementação dos servlets

--- a/src/main/webapp/template/paginas/home.html
+++ b/src/main/webapp/template/paginas/home.html
@@ -1,7 +1,7 @@
 <div class="containerX">
   <form class="search-container">
     <input type="text" id="search-bar" placeholder="O que posso te ajudar a encontrar hoje?">
-    <a href="#"><img class="search-icon" src="imgs/search-icon.png"></a>
+    <a href="#"><img class="search-icon" src="template/imgs/search-icon.png"></a>
   </form>
 </div>
 <div class="espaceembranco">
