--- a/src/main/webapp/template/paginas/titulo/tituloui.html
+++ b/src/main/webapp/template/paginas/titulo/tituloui.html
@@ -28,7 +28,7 @@
       <div class="col-9">
         <label for="">Categoria</label>
         <select class="" name="">
-          <option value="option">Categoria</option>
+          <option value="1">Categoria</option>
         </select>
       </div>
       <div class="containerX ">
