Classes Prontas Pra Downtapa BLL | FRONT

--- a/src/main/webapp/template/paginas/cadastro.html
+++ b/src/main/webapp/template/paginas/cadastro.html
@@ -1,30 +1,70 @@
 <div class="containerX">
   <div class="containerMD">
     <form class="form-login" action="index.html" method="post">
-      <div class="float-l">
-        <label for="">Email</label>
-        <input type="text" name="name" class="campo-form" value="" size="30" >
+        <div class="float-l">
+        <label>Nome</label>
+        <input type="text" name="nome" class="campo-form" value="" size="30" >
       </div>
       <div class="float-l">
-        <label for="">Senha</label>
-        <input type="text" name="name" class="campo-form" value="" size="30" >
+        <label>CPF</label>
+        <input type="text" name="CPF" class="campo-form" value="" size="30" >
+      </div>      
+       <div class="float-l">
+        <label>Email</label>
+        <input type="text" name="email" class="campo-form" value="" size="30" >
       </div>
       <div class="float-l">
-        <label for="">Telefone:</label>
-        <input type="text" name="name" class="campo-form" value="" size="30" >
+        <label>Senha</label>
+        <input type="password" name="senha" class="campo-form" value="" size="30" >
       </div>
       <div class="float-l">
-        <label for="">Telefone secundario:</label>
-        <input type="text" name="name" class="campo-form" value="" size="30" >
+        <label>Telefone Residencial:</label>
+        <input type="text" name="telres" class="campo-form" value="" size="30" >
       </div>
       <div class="float-l">
-        <label for="">Tipo de conta:</label>
-        <select class="" name="">
+        <label>Telefone Celular:</label>
+        <input type="text" name="telcel" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Telefone Comercial:</label>
+        <input type="text" name="telcom" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Matricula</label>
+        <input type="text" name="matricula" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Logradouro</label>
+        <input type="text" name="logr" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>CEP</label>
+        <input type="text" name="CEP" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Cidade</label>
+        <input type="text" name="cidade" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Estado</label>
+        <input type="text" name="estado" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Pais</label>
+        <input type="text" name="pais" class="campo-form" value="" size="30" >
+      </div>
+      <div class="float-l">
+        <label>Tipo de conta:</label>
+        <select class="" name="acesso">
           <option value="option">Tipo de conta</option>
+          <option value="1">Admin</option>
+          <option value="2">Funcionario</option>
+          <option value="3">Professor</option>
+          <option value="4">Aluno</option>
         </select>
       </div>
       <div class="float-l">
-        <input type="button" class="botaoX verde" name="name" value="Cadastrar">
+        <input type="button" class="botaoX verde" name="cadastrar" value="cadastrar">
       </div>
     </form>
   </div>
