Classes Prontas Pra Downtapa BLL | FRONT

--- a/src/main/webapp/template/paginas/cadastro.html
+++ b/src/main/webapp/template/paginas/cadastro.html
@@ -1,6 +1,6 @@
 <div class="containerX">
   <div class="containerMD">
-    <form class="form-login" action="index.html" method="post">
+    <form class="form-login" action="Usuario.do?acao=cadastrar" method="post">
         <div class="float-l">
         <label>Nome</label>
         <input type="text" name="nome" class="campo-form" value="" size="30" >
@@ -64,7 +64,7 @@
         </select>
       </div>
       <div class="float-l">
-        <input type="button" class="botaoX verde" name="cadastrar" value="cadastrar">
+        <input type="submit" class="botaoX verde" name="cadastrar" value="cadastrar">
       </div>
     </form>
   </div>
