--- a/src/main/webapp/template/css/estilo.css
+++ b/src/main/webapp/template/css/estilo.css
@@ -119,6 +119,15 @@ label {
   width: 300px;
   float: left;
 }
+.texto-centro {
+    vertical-align: middle;
+    text-align: center;
+}
+.texto-branco {
+    color:white;
+    font-family: sans-serif;
+    font-weight: bold;
+}
 .botaoS {
   width: 80px;
   height: 30px;
@@ -176,15 +185,31 @@ label {
   margin: 10px;
 }
 
-nav {
-
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
 }
-nav a{
 
+nav li {
+    float: left;
 }
-nav a:active{
 
+nav li a {
+    display: block;
+    color: #666;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
+
+nav li a:hover:not(.active) {
+    background-color: #ddd;
+}
+
 /*Barra pesquisa*/
 
 .search-container{
@@ -227,4 +252,31 @@ input#search-bar{
   height: 75px;
   top: -62px;
   right: -45px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #D0CFCE}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
 }
