Conserto de cadastro

--- a/src/main/webapp/template/paginas/login.html
+++ b/src/main/webapp/template/paginas/login.html
@@ -8,7 +8,7 @@
       </div>
       <div class="float-l">
         <label for="senha">Senha</label>
-        <input type="text" id="senha" name="senha" value=""  size="30" >
+        <input type="password" id="senha" name="senha" value=""  size="30" >
       </div>
       <div class="float-r">
         <input type="submit" class="botaoX verde" name="name" value="Entrar">
