Começo do emprestimo

--- a/src/main/webapp/template/paginas/login.html
+++ b/src/main/webapp/template/paginas/login.html
@@ -4,11 +4,11 @@
       <div class="float-l">
         <div class="float-l">
         <label for="">Email</label>
-        <input type="text" name="email" class="campo-form" value="" size="30" >
+        <input type="text" name="email" class="campo-form" value="rubrivira" size="30" >
       </div>
       <div class="float-l">
         <label for="senha">Senha</label>
-        <input type="password" id="senha" name="senha" value=""  size="30" >
+        <input type="password" id="senha" name="senha" value="uhu"  size="30" >
       </div>
       <div class="float-r">
         <input type="submit" class="botaoX verde" name="name" value="Entrar">
