--- a/src/main/webapp/template/css/estilo.css
+++ b/src/main/webapp/template/css/estilo.css
@@ -88,8 +88,17 @@ input[type=text], select {
     border-radius: 4px;
     box-sizing: border-box;
 }
-input[type=password], select {
+input[type=text], select {
     width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=search], select {
+    /*width: 20%;*/
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
