--- a/src/main/webapp/template/css/estilo.css
+++ b/src/main/webapp/template/css/estilo.css
@@ -106,7 +106,15 @@ input[type=search], select {
     border-radius: 4px;
     box-sizing: border-box;
 }
-
+.inputN {
+    /*width: 20%;*/
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
 input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
@@ -116,6 +124,17 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+input[type=password] {
+    /*width: 100%;*/
+    /*background-color: #4CAF50;*/
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: black;
 }
 input[type=date] {
     width: 100%;
